@@ -1,26 +1,42 @@
 package com.lotteon.service.category;
 
 import com.lotteon.dto.requestDto.PostProdCateMapperDTO;
+import com.lotteon.dto.requestDto.PostProductDTO;
+import com.lotteon.dto.requestDto.ProductPageRequestDTO;
 import com.lotteon.dto.responseDto.GetCategoryDto;
 import com.lotteon.dto.responseDto.GetProdCateDTO;
+import com.lotteon.dto.responseDto.ProductPageResponseDTO;
 import com.lotteon.dto.responseDto.TestResponseDto;
 import com.lotteon.entity.category.CategoryProduct;
 import com.lotteon.entity.category.CategoryProductMapper;
 import com.lotteon.entity.product.Product;
+import com.lotteon.entity.product.QProduct;
 import com.lotteon.repository.category.CategoryProdMapperRepository;
 import com.lotteon.repository.category.CategoryProductRepository;
 import com.lotteon.repository.product.ProductRepository;
+import com.querydsl.core.Tuple;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
+/*
+* 이름 : 이상훈
+* 날짜 : 2024-10-26
+* 작업내용 : 카테고리 출력 레디스 인메모리디비 사용하기
+* */
 @Service
 @RequiredArgsConstructor
 @Transactional
+@Log4j2
 public class CategoryProductService {
 
     private final CategoryProductRepository categoryProductRepository;
@@ -61,15 +77,16 @@ public class CategoryProductService {
         }
     }
 
-
+    @Cacheable(value = "categoryCache", key = "'category'",cacheManager = "cacheManager")
     public List<GetCategoryDto> findCategory() {
+        System.out.println("디비접속후 카테고리 조회");
         List<CategoryProduct> categoryProducts = categoryProductRepository.findAllByCategoryLevel(1);
-        System.out.println(categoryProducts);
-        List<GetCategoryDto> dtos = categoryProducts.stream().map(v->v.toGetCategoryDto()).toList();
+        List<GetCategoryDto> dtos = categoryProducts.stream().map(v->v.toGetCategoryDto()).collect(Collectors.toList());
 
         return dtos;
     }
 
+    @Cacheable(value = "categoryCache", key = "'category2_' + #id",cacheManager = "cacheManager")
     public List<GetCategoryDto> findCategory2(Long id) {
         CategoryProduct categoryProducts = categoryProductRepository.findByCategoryId(id);
         List<CategoryProduct> cates = categoryProducts.getChildren();
@@ -77,11 +94,12 @@ public class CategoryProductService {
         List<GetCategoryDto> dtos = cates.stream()
                 .sorted(Comparator.comparing(CategoryProduct::getCategoryOrder))
                 .map(CategoryProduct::toGetCategoryDto)
-                .toList();
+                .collect(Collectors.toList());
 
         return dtos;
     }
 
+    @Cacheable(value = "categoryCache", key = "'category3_' + #id",cacheManager = "cacheManager")
     public Map<String,Object> findCategory3(Long id) {
         CategoryProduct categoryProducts = categoryProductRepository.findByCategoryId(id);
         List<CategoryProduct> cates = categoryProducts.getChildren();
@@ -89,14 +107,14 @@ public class CategoryProductService {
         cates.forEach(v->{
 
             List<CategoryProduct> cates2 = v.getChildren();
-            List<GetCategoryDto> dtos = cates2.stream().map(v2->v2.toGetCategoryDto()).toList();
+            List<GetCategoryDto> dtos = cates2.stream().map(v2->v2.toGetCategoryDto()).collect(Collectors.toList());
             map.put(v.getCategoryName(),dtos);
         });
 
 
         return map;
     }
-
+    @CacheEvict(value = "categoryCache", allEntries = true)
     public String deleteCategory(Long id) {
         CategoryProduct categoryProducts = categoryProductRepository.findByCategoryId(id);
         if(categoryProducts.getProductMappings().isEmpty()){
@@ -106,7 +124,7 @@ public class CategoryProductService {
             return "FA";
         }
     }
-
+    @CacheEvict(value = "categoryCache", allEntries = true)
     public void insertProdCate() {
         Product product = productRepository.findById((long)1).orElse(null);
         List<CategoryProduct> categoryProduct1 = categoryProductRepository.findAllByCategoryId((long)28);
@@ -115,7 +133,7 @@ public class CategoryProductService {
 //        categoryProdMapperRepository.save(categoryProduct);
 
     }
-
+    @CacheEvict(value = "categoryCache", allEntries = true)
     public void postCategory(GetCategoryDto getCategoryDto) {
         Optional<CategoryProduct> categoryProduct = categoryProductRepository.findById(getCategoryDto.getId());
 
@@ -139,7 +157,7 @@ public class CategoryProductService {
         categoryProductRepository.save(newCategoryProduct);
 
     }
-
+    @CacheEvict(value = "categoryCache", allEntries = true)
     public void putCategory(GetCategoryDto getCategoryDto) {
         Optional<CategoryProduct> categoryProduct = categoryProductRepository.findById(Long.parseLong(getCategoryDto.getName()));
         Optional<CategoryProduct> categoryParent = categoryProductRepository.findById(getCategoryDto.getId());
@@ -184,6 +202,50 @@ public class CategoryProductService {
         System.out.println("22222222222233333333"+categoryProductMapper);
 
         categoryProdMapperRepository.save(categoryProductMapper);
+    }
+
+    public ProductPageResponseDTO<PostProductDTO> findProductCategory(String cate, ProductPageRequestDTO pageRequestDTO) {
+        Optional<CategoryProduct> opt = categoryProductRepository.findById(Long.parseLong(cate));
+        CategoryProduct categoryProduct1 = null;
+        if(opt.isPresent()){
+            categoryProduct1 = opt.get();
+        }
+        List<CategoryProductMapper> cateMappers = categoryProdMapperRepository.findAllByCategory(categoryProduct1);
+        // Step 1: cateMappers에서 productId 리스트 추출
+        List<Long> productIds = cateMappers.stream()
+                .map(mapper -> mapper.getProduct().getId())
+                .toList();
+
+        Pageable pageable = pageRequestDTO.getPageable("id");
+
+        Page<Tuple> pageProduct = productRepository.findProductsWithSellerInfoByIds(pageRequestDTO, pageable, productIds);
+
+        List<String> companys = new ArrayList<>();
+        List<Integer> grade = new ArrayList<>();
+        List<PostProductDTO> productList = pageProduct.getContent().stream().map(tuple -> {
+            Product product = tuple.get(0, Product.class);
+            String company = tuple.get(1, String.class);
+            Integer sellerGrade = tuple.get(2, Integer.class);
+            companys.add(company);
+            grade.add(sellerGrade);
+            return modelMapper.map(product, PostProductDTO.class);
+        }).toList();
+
+        for(int i = 0; i < companys.size(); i++) {
+            productList.get(i).setSellCompany(companys.get(i));
+            productList.get(i).setSellGrade(grade.get(i));
+        }
+
+        int total = (int)pageProduct.getTotalElements();
+
+        log.info("11111111111111111111" + productList);
+
+        return ProductPageResponseDTO.<PostProductDTO>builder()
+                .productPageRequestDTO(pageRequestDTO)
+                .dtoList(productList)
+                .total(total)
+                .build();
+
     }
 
 }
